--- a/PruebaApi/appsettings.json
+++ b/PruebaApi/appsettings.json
@@ -7,10 +7,10 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=srvhpg10;Initial Catalog=Prueba;Integrated Security=False;Connect Timeout=30;Encrypt=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User ID=nexo;Password=Sh1ppud3n"
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=PRUEBA;Integrated Security=False;Connect Timeout=30;Encrypt=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User ID=sa;Password=ESPIrilo"
   },
   "Jwt": {
-    "Key": "Prueba2024",
+    "Key": "Clavesecretadeprueba2024Clavesecreta2024",
     "Issuer": "localhost:8444/",
     "Audience": "localhost:8444/"
   },
