--- a/PruebaApi/appsettings.json
+++ b/PruebaApi/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=PRUEBA;Integrated Security=False;Connect Timeout=30;Encrypt=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User ID=sa;Password=ESPIrilo"
+    "DefaultConnection": "Data Source=srvhpg10;Initial Catalog=PRUEBA;Integrated Security=False;Connect Timeout=30;Encrypt=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User ID=nexo;Password=Sh1ppud3n"
   },
   "Jwt": {
     "Key": "Clavesecretadeprueba2024Clavesecreta2024",
@@ -15,4 +15,4 @@
     "Audience": "localhost:8444/"
   },
   "AllowedHosts": "*"
-}
+} 
