Se incluye un Log que reciba o registre los errores de conexion al servidor.

--- a/PruebaApi/appsettings.json
+++ b/PruebaApi/appsettings.json
@@ -7,12 +7,12 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=srvhpg10;Initial Catalog=PRUEBA;Integrated Security=False;Connect Timeout=30;Encrypt=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User ID=nexo;Password=Sh1ppud3n"
+    "DefaultConnection": "Data Source=SQLEXPRESS;Initial Catalog=PRUEBA;Integrated Security=False;Connect Timeout=30;Encrypt=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;User ID=sa;Password=ESPIrilo"
   },
   "Jwt": {
     "Key": "Clavesecretadeprueba2024Clavesecreta2024",
-    "Issuer": "localhost:8444/",
-    "Audience": "localhost:8444/"
+    "Issuer": "localhost:8446/",
+    "Audience": "localhost:8446/"
   },
   "AllowedHosts": "*"
 } 
